--- a/akka-remote/src/main/resources/akka.conf
+++ b/akka-remote/src/main/resources/akka.conf
@@ -70,7 +70,7 @@ akka {
       port = 9919                  # The port clients should connect to. Default is 2552 (AKKA)
       message-frame-size = 1048576 # Increase this if you want to be able to send messages with large payloads
       connection-timeout = 1
-      require-cookie = on          # Should the remote server require that it peers share the same secure-cookie (defined in the 'remote' section)?
+      require-cookie = off          # Should the remote server require that it peers share the same secure-cookie (defined in the 'remote' section)?
       untrusted-mode = off         # Enable untrusted mode for full security of server managed actors, allows untrusted clients to connect.
       backlog = 8096
     }
